#2 - updated index.html for localization and SEO, added Tailwind CSS and PostCSS support, refactored App component with animations and responsive design, also removed unused App.css and replaced index.css with Tailwind imports

--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>warlikelaux-github-io</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<html lang="ru">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💻</text></svg>" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Евгений Федотов - Backend-focused PHP Developer и FullStack Developer. 9+ лет в IT, 5+ лет в разработке. Специализация: PHP 8.4, Yii2, Laravel, Clean Architecture, DDD, CQRS. Превращаю сложную бизнес-логику в элегантные архитектурные решения." />
+  <meta name="keywords"
+    content="PHP Developer, Backend Developer, Yii2, Laravel, Clean Architecture, DDD, CQRS, FullStack Developer, Евгений Федотов" />
+  <meta name="author" content="Евгений Федотов" />
+
+  <meta property="og:title" content="Евгений Федотов - Backend-focused PHP Developer | FullStack Developer" />
+  <meta property="og:description"
+    content="9+ лет в IT, 5+ лет в разработке. Специализация: PHP 8.4, Yii2, Laravel, Clean Architecture, DDD, CQRS." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://avatars.githubusercontent.com/u/48706973?v=4" />
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Евгений Федотов - Backend-focused PHP Developer" />
+  <meta name="twitter:description"
+    content="9+ лет в IT, 5+ лет в разработке. PHP 8.4, Yii2, Laravel, Clean Architecture, DDD, CQRS." />
+
+  <title>Евгений Федотов - Backend-focused PHP Developer | FullStack Developer</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
